--- a/style.css
+++ b/style.css
@@ -39,7 +39,8 @@ nav {
   }
 
   .main-content{
-      background-color: rgb(32, 101, 136);
+      background: url("images/city-scape.svg");
+      background-size: cover;
       margin: 0;
       padding-bottom: 100px;
       
@@ -147,7 +148,9 @@ nav {
 }
 
 .about{
-    background: rgb(32, 101, 136);
+    
+    background: url("images/forklift.svg");
+    background-size: cover;
     margin: 0;
     padding: 4em 0 0;
     height: 24em;
@@ -159,8 +162,10 @@ nav {
 }
 
 .about-content{
+   
+    background-size: cover;
     width: 500px;
-    margin-left: 30%;
+    margin-left: 10%;
     color: #fff;
 
 }
